chore: add prettier

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "private": true,
-  "workspaces": ["packages/**"],
+  "workspaces": [
+    "packages/**"
+  ],
   "engines": {
     "yarn": "^1.22.10",
     "node": ">=16.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.2",
+    "prettier-plugin-packagejson": "^2.2.11"
   }
 }
