--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "node": ">=16.2.0"
   },
   "scripts": {
+    "lint": "eslint .",
     "typecheck": "yarn workspaces run typecheck"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "eslint": "^7.31.0",
+    "eslint-config-alloy": "^4.1.0",
+    "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.3.5"
   }
 }
