--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "workspaces": [
     "packages/**"
   ],
-  "engines": {
-    "yarn": "^1.22.10",
-    "node": ">=16.2.0"
-  },
   "scripts": {
     "lint": "eslint .",
     "typecheck": "yarn workspaces run typecheck",
@@ -18,11 +14,16 @@
     "eslint": "^7.31.0",
     "eslint-config-alloy": "^4.1.0",
     "eslint-plugin-react": "^7.24.0",
+    "husky": "^7.0.0",
+    "lint-staged": ">=10",
     "prettier": "^2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.3.5",
-    "husky": "^7.0.0"
+    "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": ">=16.2.0",
+    "yarn": "^1.22.10"
   }
 }
