--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint .",
     "typecheck": "yarn workspaces run typecheck",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pretest": "tsc --noEmit"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
