--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
-    "eslint-config-alloy": "^4.1.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-config-kentcdodds": "^19.1.1",
     "husky": "^7.0.0",
     "lint-staged": ">=10",
     "prettier": "^2.3.2",
