--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   ],
   "scripts": {
     "lint": "eslint .",
+    "test": "jest",
     "typecheck": "yarn workspaces run typecheck",
-    "prepare": "husky install",
-    "pretest": "tsc --noEmit"
+    "prepare": "husky install"
   },
   "commitlint": {
     "extends": [
@@ -35,15 +35,30 @@
       "kentcdodds/jsx-a11y"
     ]
   },
+  "jest": {
+    "preset": "ts-jest",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ],
+    "testEnvironment": "jsdom",
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
+  },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/jest": "^26.0.24",
     "eslint": "^7.31.0",
     "eslint-config-kentcdodds": "^19.1.1",
     "husky": "^7.0.0",
+    "jest": "^27.0.6",
+    "jest-watch-typeahead": "^0.6.4",
     "lint-staged": ">=10",
     "prettier": "^2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   },
   "engines": {
