--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9"
   }
