--- a/starters/gatsby-starter-gspenst/package.json
+++ b/starters/gatsby-starter-gspenst/package.json
@@ -11,6 +11,7 @@
     "preview": "gatsby build && gatsby serve"
   },
   "dependencies": {
+    "@gspenst/components": "*",
     "gatsby": "^3.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
