--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,4 +1,11 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"]
+  "include": ["src"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      // Emotion typedefs now point to an empty file, which unsets all declarations
+      "@emotion/core": ["./types/emotion.d.ts"]
+    }
+  }
 }
