chore: move emotionjs fix to root
ts-jest needs also this information.

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,11 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      // Emotion typedefs now point to an empty file, which unsets all declarations
-      "@emotion/core": ["./types/emotion.d.ts"]
-    }
-  }
+  "include": ["src"]
 }
