--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "@gspenst/root",
   "private": true,
   "workspaces": [
-    "packages/**",
-    "site"
+    "packages/*"
   ],
   "scripts": {
+    "build": "preconstruct build",
+    "watch": "preconstruct watch",
+    "clean": "rimraf packages/*/dist",
+    "prepare": "husky install && preconstruct dev",
     "lint": "eslint .",
     "test": "jest",
-    "typecheck": "yarn workspaces run typecheck",
-    "prepare": "husky install"
+    "typecheck": "tsc --noEmit"
   },
   "commitlint": {
     "extends": [
@@ -49,9 +51,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@types/jest": "^26.0.24",
+    "@preconstruct/cli": "^2.1.2",
+    "@types/jest": "^27.0.1",
     "eslint": "^7.31.0",
     "eslint-config-kentcdodds": "^19.1.1",
     "husky": "^7.0.0",
@@ -60,11 +66,17 @@
     "lint-staged": ">=10",
     "prettier": "^2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=16.2.0",
-    "yarn": "^1.22.10"
+    "npm": "^7.14.0"
+  },
+  "preconstruct": {
+    "packages": [
+      "packages/*"
+    ]
   }
 }
