--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@gspenst/root",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "starters/*"
   ],
   "scripts": {
     "build": "preconstruct build",
@@ -10,6 +11,7 @@
     "clean": "rimraf packages/*/dist",
     "prepare": "husky install && preconstruct dev",
     "lint": "eslint .",
+    "pretest": "npm run typecheck",
     "test": "jest",
     "typecheck": "tsc --noEmit"
   },
@@ -68,7 +70,7 @@
     "prettier-plugin-packagejson": "^2.2.11",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.4",
-    "typescript": "^4.3.5"
+    "typescript": "4.4.2"
   },
   "engines": {
     "node": ">=16.2.0",
