--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@types/react": "^17.0.15",
+    "@types/react": "17.0.20",
     "@types/react-dom": "^17.0.9"
   }
 }
