--- a/starters/gatsby-starter-gspenst/tsconfig.json
+++ b/starters/gatsby-starter-gspenst/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "allowJs": true
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+
 }
