--- a/starters/next-starter-gspenst/package.json
+++ b/starters/next-starter-gspenst/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "dev": "next dev",
     "build": "next build",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@gspenst/components": "*",
