--- a/starters/gatsby-starter-gspenst/package.json
+++ b/starters/gatsby-starter-gspenst/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@gspenst/components": "*",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
