--- a/starters/next-starter-typescript/package.json
+++ b/starters/next-starter-typescript/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "gatsby-starter-gspenst",
-  "version": "1.0.0",
+  "name": "@gspenst/next-starter-typescript",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "gatsby build && gatsby serve",
-    "dev": "gatsby develop",
-    "build": "gatsby build",
-    "clean": "gatsby clean",
-    "serve": "gatsby serve",
+    "start": "next start",
+    "dev": "next dev",
+    "build": "next build",
+    "export": "npm run build && next export",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@gspenst/components": "*",
-    "dotenv": "^10.0.0",
-    "gatsby": "^3.11.1",
+    "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
