--- a/starters/next-starter-typescript/tsconfig.json
+++ b/starters/next-starter-typescript/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "extends": "../../tsconfig.options.json",
   "compilerOptions": {
-    "allowJs": true
+    "allowJs": true,
+    "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx"]
+  "include": [
+    "next-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
