--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -4,7 +4,15 @@
   "private": true,
   "main": "dist/gspenst-audit.cjs.js",
   "bin": "./bin.js",
+  "babel": {
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
+  },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
+    "chrome-launcher": "^0.14.0",
     "lighthouse": "^8.4.0"
   },
   "preconstruct": {
