--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -13,11 +13,11 @@
     "resolveJsonModule": true, // Allows importing modules with a ‘.json’ extension. This includes generating a type for the import based on the static JSON shape.
     "paths": {
       // Emotion typedefs now point to an empty file, which unsets all declarations
-      "@emotion/core": ["./types/emotion.d.ts"]
+      "@emotion/core": ["./types/emotion.d.ts"],
+      // lighthouse currently does not expose types https://github.com/GoogleChrome/lighthouse/issues/1773
+      "lighthouse": ["./types/lighthouse.d.ts"],
     },
     "isolatedModules": true, // Setting the isolatedModules flag tells TypeScript to warn you if you write certain code that can’t be correctly interpreted by a single-file transpilation process (eg babel).
-
-
     "lib": [
       "dom",
       "dom.iterable",
