--- a/package.json
+++ b/package.json
@@ -18,7 +18,27 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
-    ]
+    ],
+    "rules": {
+      "type-enum": [
+        2,
+        "always",
+        [
+          "build",
+          "chore",
+          "ci",
+          "docs",
+          "feat",
+          "fix",
+          "perf",
+          "refactor",
+          "revert",
+          "style",
+          "test",
+          "spike"
+        ]
+      ]
+    }
   },
   "lint-staged": {
     "*.{ts,tsx,md,json,mdx}": "prettier --write",
