--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -13,7 +13,8 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/runtime": "^7.15.4",
     "chrome-launcher": "^0.14.0",
-    "lighthouse": "^8.4.0"
+    "lighthouse": "^8.4.0",
+    "yargs": "^17.1.1"
   },
   "preconstruct": {
     "entrypoints": [
