--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/runtime": "^7.15.4",
-    "@types/serve-handler": "^6.1.1",
     "chrome-launcher": "^0.14.0",
+    "clipboardy": "^2.3.0",
     "http-terminator": "^3.0.0",
     "lighthouse": "^8.4.0",
     "serve-handler": "^6.1.3",
     "yargs": "^17.1.1"
+  },
+  "devDependencies": {
+    "@types/serve-handler": "^6.1.1"
   },
   "preconstruct": {
     "entrypoints": [
