--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.15.4",
     "chrome-launcher": "^0.14.0",
     "clipboardy": "^2.3.0",
+    "glob": "^7.1.7",
     "http-terminator": "^3.0.0",
     "lighthouse": "^8.4.0",
     "serve-handler": "^6.1.3",
