--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -15,6 +15,7 @@
       // Emotion typedefs now point to an empty file, which unsets all declarations
       "@emotion/core": ["./types/emotion.d.ts"],
       // lighthouse currently does not expose types https://github.com/GoogleChrome/lighthouse/issues/1773
+      "lighthouse/lighthouse-core/lib/median-run": ["./types/lighthouse.d.ts"],
       "lighthouse": ["./types/lighthouse.d.ts"],
     },
     "isolatedModules": true, // Setting the isolatedModules flag tells TypeScript to warn you if you write certain code that can’t be correctly interpreted by a single-file transpilation process (eg babel).
