--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -13,11 +13,13 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/runtime": "^7.15.4",
     "chrome-launcher": "^0.14.0",
+    "cli-table": "^0.3.6",
     "clipboardy": "^2.3.0",
     "glob": "^7.1.7",
     "http-terminator": "^3.0.0",
     "lighthouse": "^8.4.0",
     "serve-handler": "^6.1.3",
+    "table": "^6.7.1",
     "yargs": "^17.1.1"
   },
   "devDependencies": {
