feat(audit): add module builds

--- a/packages/audit/cli/package.json
+++ b/packages/audit/cli/package.json
@@ -1,3 +1,4 @@
 {
-  "main": "dist/gspenst-audit-cli.cjs.js"
+  "main": "dist/gspenst-audit-cli.cjs.js",
+  "module": "dist/gspenst-audit-cli.esm.js"
 }
