chore: co-locate types to the packages they are couples with

--- a/packages/audit/tsconfig.json
+++ b/packages/audit/tsconfig.json
@@ -1,4 +1,11 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"]
+  "include": ["src"],
+  "compilerOptions": {
+    "paths": {
+      // lighthouse currently does not expose types https://github.com/GoogleChrome/lighthouse/issues/1773
+      "lighthouse/lighthouse-core/lib/median-run": ["./types/lighthouse.d.ts"],
+      "lighthouse": ["./types/lighthouse.d.ts"],
+    },
+  }
 }
