chore: use `site` folder as the location for the working project
In `starters` are all the different starting points located. To start
copy a starter into `site`. If its desired to track changes with git
remove it from `.gitignore`.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "starters/*"
+    "site"
   ],
   "scripts": {
     "build": "preconstruct build",
