--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/colors": "^0.1.7",
     "@stitches/core": "^1.0.0",
     "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/react": "^6.3.4",
+    "@storybook/react": "^6.3.4"
+  },
+  "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
