feat: switch to new jsx transform
https://reactjs.org/blog/2020/09/22/introducing-the-new-jsx-transform.html

--- a/package.json
+++ b/package.json
@@ -59,7 +59,11 @@
       "kentcdodds/react",
       "kentcdodds/jest",
       "kentcdodds/jsx-a11y"
-    ]
+    ],
+    "rules": {
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "jest": {
     "preset": "ts-jest",
