--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -8,16 +8,22 @@
   },
   "dependencies": {
     "@gspenst/components": "^0.0.1",
+    "@mdx-js/loader": "^2.0.0-next.9",
+    "@mdx-js/mdx": "^2.0.0-next.9",
+    "@types/loader-utils": "^2.0.3",
+    "loader-utils": "^2.0.0",
     "next-themes": "^0.0.15",
-    "nextra": "^1.1.0"
+    "remark-gfm": "^1.0.0"
   },
   "peerDependencies": {
     "next": "^11.1.2",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "webpack": "^5.0.0"
   },
   "preconstruct": {
     "entrypoints": [
       "index.ts",
+      "loader.ts",
       "components.ts"
     ]
   }
