--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,6 +24,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/react": "17.0.20",
-    "@types/react-dom": "^17.0.9"
+    "@types/react-dom": "^17.0.9",
+    "html-webpack-plugin": "^5.3.2"
   }
 }
