--- a/starters/next-starter-typescript/tsconfig.json
+++ b/starters/next-starter-typescript/tsconfig.json
@@ -4,12 +4,6 @@
     "allowJs": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "src", "pages", "theme.config.ts"],
+  "exclude": ["node_modules"]
 }
