--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -11,7 +11,9 @@
     "@mdx-js/loader": "^2.0.0-next.9",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "next-themes": "^0.0.15",
-    "remark-gfm": "^1.0.0"
+    "remark-gfm": "^1.0.0",
+    "sourcebit": "^0.11.0",
+    "sourcebit-target-next": "^0.6.4"
   },
   "devDependencies": {
     "@types/webpack": "^5.0.0"
