--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -13,6 +13,7 @@
     "next-themes": "^0.0.15",
     "remark-gfm": "^1.0.0",
     "sourcebit": "^0.11.0",
+    "sourcebit-sample-plugin": "^0.3.1",
     "sourcebit-target-next": "^0.6.4"
   },
   "devDependencies": {
