chore(typescript): move global types to root

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "lint-staged": {
     "*.{ts,tsx,md,json,mdx}": "prettier --write",
     "*.{ts,tsx}": [
-      "eslint --cache --fix",
+      "eslint --cache",
       "git add",
       "jest --bail --findRelatedTests"
     ]
