--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,10 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"],
-  "compilerOptions": {
-    "paths": {
-      // Emotion typedefs now point to an empty file, which unsets all declarations
-      "@emotion/core": ["./types/emotion.d.ts"],
-    },
-  }
+  "include": ["src"]
 }
