--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,16 @@
 {
   "extends": "./tsconfig.options.json",
-  "include": [".eslintrc.js"]
+  "include": ["./packages", "./starters"],
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "paths": {
+      "*": ["./typings/*"],
+      // lighthouse currently does not expose types https://github.com/GoogleChrome/lighthouse/issues/1773
+      "lighthouse/lighthouse-core/lib/median-run": [
+        "./typings/lighthouse.d.ts"
+      ],
+      // Emotion typedefs now point to an empty file, which unsets all declarations
+      "@emotion/core": ["./typings/emotion.d.ts"]
+    }
+  }
 }
