--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "@gspenst/components": "^0.0.1",
+    "@gspenst/sourcebit-sample-plugin": "^0.0.1",
     "@mdx-js/loader": "^2.0.0-next.9",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "next-themes": "^0.0.15",
     "remark-gfm": "^1.0.0",
     "sourcebit": "^0.11.0",
-    "sourcebit-sample-plugin": "^0.3.1",
     "sourcebit-target-next": "^0.6.4"
   },
   "devDependencies": {
