feat: add shared-kernel for types
https://refactoring.guru/smells/primitive-obsession
http://ddd.fed.wiki.org/view/welcome-visitors/view/domain-driven-design/view/shared-kernel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["./packages", "./starters"],
   "exclude": ["node_modules"],
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types", "./typings"],
     "paths": {
       "*": ["./typings/*"],
       // lighthouse currently does not expose types https://github.com/GoogleChrome/lighthouse/issues/1773
