chore: update ts compiler options

--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -26,6 +26,7 @@
     /* "noImplicitAny": true, */
     /* "noImplicitReturns": true, */
     /* "noUnusedParameters": true */
+    /* "noUnusedLocals": true */
 
     /* experimentalDecorators: true, */
     /* emitDecoratorMetadata: true, */
