--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "preconstruct build",
     "clean": "rimraf packages/*/dist",
-    "lint": "eslint .",
+    "lint": "eslint_d . --ext .ts,.tsx",
     "prepare": "husky install && preconstruct dev",
     "pretest": "npm run typecheck",
     "test": "jest",
@@ -43,7 +43,7 @@
   "lint-staged": {
     "*.{ts,tsx,md,json,mdx}": "prettier --write",
     "*.{ts,tsx}": [
-      "eslint --cache",
+      "eslint_d --cache",
       "jest --bail --findRelatedTests"
     ]
   },
@@ -102,8 +102,8 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@preconstruct/cli": "^2.1.3",
     "@types/jest": "^27.0.1",
-    "eslint": "^7.31.0",
     "eslint-config-kentcdodds": "^19.1.1",
+    "eslint_d": "^11.0.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "jest-watch-typeahead": "^0.6.4",
