--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "type-fest": "^2.8.0"
   }
 }
