--- a/packages/sourcebit-sample-plugin/package.json
+++ b/packages/sourcebit-sample-plugin/package.json
@@ -15,13 +15,14 @@
   "main": "dist/gspenst-sourcebit-sample-plugin.cjs.js",
   "module": "dist/gspenst-sourcebit-sample-plugin.esm.js",
   "scripts": {
+    "gen": "./src/data.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc --noEmit"
   },
-  "peerDependencies": {
-    "sourcebit": "^0.11.0"
-  },
   "dependencies": {
     "dreamjs": "^0.2.0"
+  },
+  "peerDependencies": {
+    "sourcebit": "^0.11.0"
   }
 }
