--- a/packages/theme-minimal/package.json
+++ b/packages/theme-minimal/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "@gspenst/components": "^0.0.1",
-    "@gspenst/next": "^0.0.1"
+    "@gspenst/next": "^0.0.1",
+    "@gspenst/utils": "^0.0.1"
   },
   "peerDependencies": {
-    "next": "^11.1.2",
+    "next": "^11.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
