--- a/starters/next-starter-typescript/package.json
+++ b/starters/next-starter-typescript/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "next start",
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev",
     "export": "npm run build && next export",
+    "start": "next start",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@gspenst/components": "*",
     "@gspenst/next": "*",
-    "next": "^11.1.2",
+    "@gspenst/theme-minimal": "*",
+    "@gspenst/utils": "*",
+    "next": "^11.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
