--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -19,16 +19,17 @@
 
     // Typechecking Options
     "strictNullChecks": true
-    /* "strictFunctionTypes": true, */
-    /* "strictPropertyInitialization": true, */
-    /* "noFallthroughCasesInSwitch": true, */
-    /* "noImplicitAny": true, */
-    /* "noImplicitReturns": true, */
-    /* "noUnusedParameters": true */
-    /* "noUnusedLocals": true */
-
-    /* experimentalDecorators: true, */
-    /* emitDecoratorMetadata: true, */
-    /* pretty: true, */
+    // "noUncheckedIndexedAccess": true,
+    // "strictFunctionTypes": true,
+    // "strictPropertyInitialization": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "noImplicitAny": true,
+    // "noImplicitReturns": true,
+    // "noUnusedParameters": true
+    // "noUnusedLocals": true,
+    //
+    // "experimentalDecorators": true,
+    // "emitDecoratorMetadata": true,
+    // "pretty": true,
   }
 }
