--- a/starters/next-starter-typescript/tsconfig.json
+++ b/starters/next-starter-typescript/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
-    "jsx": "preserve",
-    "incremental": true
+    "jsx": "preserve"
   },
   "include": ["next-env.d.ts", "src", "pages", "theme.config.ts"],
   "exclude": ["node_modules"]
