--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -12,6 +12,7 @@
     "@gspenst/utils": "^0.0.1",
     "@mdx-js/loader": "^2.0.0-next.9",
     "@mdx-js/mdx": "^2.0.0-next.9",
+    "@preconstruct/next": "^3.0.1",
     "find-cache-dir": "^3.3.2",
     "fs-extra": "^10.0.0",
     "next-themes": "^0.0.15",
