--- a/package.json
+++ b/package.json
@@ -97,12 +97,19 @@
       "@testing-library/jest-dom/extend-expect"
     ],
     "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(dot-prop)/)"
+    ],
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
@@ -110,8 +117,8 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@preconstruct/cli": "^2.1.3",
     "@types/jest": "^27.0.1",
-    "eslint-config-kentcdodds": "^19.1.1",
     "eslint_d": "^11.0.0",
+    "eslint-config-kentcdodds": "^19.1.1",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "jest-watch-typeahead": "^0.6.4",
