--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -14,6 +14,7 @@
     "@preconstruct/next": "^3.0.1",
     "find-cache-dir": "^3.3.2",
     "fs-extra": "^10.0.0",
+    "gray-matter": "^4.0.3",
     "next-themes": "^0.0.15",
     "remark-gfm": "^1.0.0",
     "sourcebit": "^0.11.0"
