--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@gspenst/root",
   "private": true,
   "workspaces": [
-    "packages/*",
-    "starters/*"
+    "packages/*"
   ],
   "scripts": {
     "build": "preconstruct build",
@@ -117,8 +116,8 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@preconstruct/cli": "^2.1.3",
     "@types/jest": "^27.0.1",
-    "eslint_d": "^11.0.0",
     "eslint-config-kentcdodds": "^19.1.1",
+    "eslint_d": "^11.0.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "jest-watch-typeahead": "^0.6.4",
