--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "preconstruct build",
     "clean": "rimraf packages/*/dist",
     "lint": "eslint_d . --ext .ts,.tsx",
-    "prepare": "husky install && preconstruct dev",
+    "prepare": "husky install",
     "test": "jest",
     "typecheck": "npm run typecheck --workspaces",
     "watch": "preconstruct watch"
