--- a/starters/starter-typescript-tinacms/package.json
+++ b/starters/starter-typescript-tinacms/package.json
@@ -9,9 +9,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@gspenst/components": "*",
+    "@preconstruct/next": "^3.0.1",
+    "next": "^12.0.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tinacms": "^0.65.3"
   },
   "devDependencies": {
