--- a/starters/starter-typescript/tsconfig.json
+++ b/starters/starter-typescript/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": ["next-env.d.ts", "src", "pages", "theme.config.ts"],
   "exclude": ["node_modules"]
