--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@gspenst/components": "^0.0.1",
+    "@gspenst/source-tina": "^0.0.1",
     "@gspenst/utils": "^0.0.1",
     "@mdx-js/loader": "^2.0.0-next.9",
     "@mdx-js/mdx": "^2.0.0-next.9",
