--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^2.0.0-next.9",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@preconstruct/next": "^3.0.1",
+    "cross-spawn": "^7.0.3",
     "find-cache-dir": "^3.3.2",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
@@ -35,8 +36,6 @@
   "preconstruct": {
     "entrypoints": [
       "index.ts",
-      "loader.ts",
-      "server.ts",
       "components.ts"
     ]
   }
