--- a/packages/theme-minimal/package.json
+++ b/packages/theme-minimal/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@gspenst/components": "^0.0.1",
     "@gspenst/next": "^0.0.1",
-    "@gspenst/utils": "^0.0.1"
+    "@gspenst/utils": "^0.0.1",
+    "tinacms": "^0.66.2"
   },
   "peerDependencies": {
     "next": "^12.0.10",
