--- a/starters/starter-typescript/tsconfig.json
+++ b/starters/starter-typescript/tsconfig.json
@@ -5,6 +5,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "src", "pages", "theme.config.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
