--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -18,8 +18,7 @@
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "next-themes": "^0.0.15",
-    "remark-gfm": "^1.0.0",
-    "sourcebit": "^0.11.0"
+    "remark-gfm": "^1.0.0"
   },
   "devDependencies": {
     "@types/find-cache-dir": "^3.2.1",
