--- a/packages/theme-minimal/package.json
+++ b/packages/theme-minimal/package.json
@@ -14,6 +14,7 @@
     "@gspenst/utils": "^0.0.1",
     "find-cache-dir": "^3.3.2",
     "fs-extra": "^10.0.0",
+    "next-themes": "^0.0.15",
     "slugify": "^1.6.5",
     "tinacms": "^0.66.5"
   },
