--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@gspenst/theme-minimal",
+  "name": "@gspenst/theme",
   "version": "0.0.1",
-  "main": "dist/gspenst-theme-minimal.cjs.js",
-  "module": "dist/gspenst-theme-minimal.esm.js",
+  "main": "dist/gspenst-theme.cjs.js",
+  "module": "dist/gspenst-theme.esm.js",
   "scripts": {
     "gen": "tinacms schema:compile",
     "postgen": "tinacms schema:types",
