--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gspenst/next-starter-typescript",
+  "name": "@gspenst/minimal-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "@gspenst/components": "*",
     "@gspenst/next": "*",
-    "@gspenst/theme-minimal": "*",
+    "@gspenst/theme": "*",
     "@gspenst/utils": "*",
     "next": "^12.0.10",
     "react": "^17.0.2",
