feat(next): Adds entry component

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -38,7 +38,8 @@
   "preconstruct": {
     "entrypoints": [
       "index.ts",
-      "loader.ts"
+      "loader.ts",
+      "client.ts"
     ]
   }
 }
