spike(next): initial server code

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -39,7 +39,8 @@
     "entrypoints": [
       "index.ts",
       "loader.ts",
-      "client.ts"
+      "client.ts",
+      "server.ts"
     ]
   }
 }
