feat(next): Route pages

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -4,6 +4,8 @@
   "main": "dist/gspenst-next.cjs.js",
   "module": "dist/gspenst-next.esm.js",
   "scripts": {
+    "gen": "tinacms schema:compile",
+    "postgen": "tinacms schema:types",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -19,7 +21,9 @@
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
-    "remark-gfm": "^1.0.0"
+    "remark-gfm": "^1.0.0",
+    "slugify": "^1.6.5",
+    "tinacms": "^0.66.7"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
