--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -23,7 +23,8 @@
     "js-yaml": "^4.1.0",
     "remark-gfm": "^1.0.0",
     "slugify": "^1.6.5",
-    "tinacms": "^0.66.7"
+    "tinacms": "^0.66.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
