--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -17,6 +17,7 @@
     "@tinacms/cli": "^0.60.6",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.3",
+    "deepmerge": "^4.2.2",
     "find-cache-dir": "^3.3.2",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
+    "@types/deepmerge": "^2.2.0",
     "@types/find-cache-dir": "^3.2.1",
     "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.5",
