--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -22,6 +22,7 @@
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
+    "path-to-regexp": "^6.2.0",
     "remark-gfm": "^1.0.0",
     "slugify": "^1.6.5",
     "tinacms": "^0.66.7",
