--- a/starters/minimal-starter/package.json
+++ b/starters/minimal-starter/package.json
@@ -15,7 +15,8 @@
     "@gspenst/theme": "*",
     "next": "^12.0.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tinacms": "^0.66.7"
   },
   "devDependencies": {
     "@types/node": "^16.4.13",
