--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -36,7 +36,8 @@
     "@types/js-yaml": "^4.0.5",
     "@types/mock-fs": "^4.13.1",
     "@types/webpack": "^5.0.0",
-    "mock-fs": "^5.1.1"
+    "mock-fs": "^5.1.1",
+    "type-fest": "^2.8.0"
   },
   "peerDependencies": {
     "next": "^12.0.10",
