--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "@types/find-cache-dir": "^3.2.1",
-    "@types/fs-extra": "^9.0.13"
+    "@types/fs-extra": "^9.0.13",
+    "type-fest": "^2.8.0"
   },
   "peerDependencies": {
     "next": "^12.0.10",
