feat(next): bunch of changes

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
           "typings/**/*.ts?(x)"
         ],
         "rules": {
-          "@typescript-eslint/no-explicit-any": "off"
+          "@typescript-eslint/no-explicit-any": "off",
+          "@typescript-eslint/no-non-null-assertion": "off"
         }
       }
     ],
