--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -45,7 +45,7 @@
     "entrypoints": [
       "index.ts",
       "loader.ts",
-      "client.ts",
+      "client.tsx",
       "server.ts"
     ]
   }
