--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -12,7 +12,7 @@
     "@mdx-js/loader": "^2.0.0-next.9",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@preconstruct/next": "^4.0.0",
-    "@tinacms/cli": "^0.60.6",
+    "@tinacms/cli": "^0.60.11",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.3",
     "find-cache-dir": "^3.3.2",
@@ -24,7 +24,8 @@
     "react-is": "^18.0.0",
     "remark-gfm": "^1.0.0",
     "slugify": "^1.6.5",
-    "tinacms": "^0.66.7",
+    "styled-components": "^5.1.3",
+    "tinacms": "^0.67.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
