--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -23,6 +23,7 @@
     "path-to-regexp": "^6.2.0",
     "react-is": "^18.0.0",
     "remark-gfm": "^1.0.0",
+    "runtypes": "^6.5.1",
     "slugify": "^1.6.5",
     "styled-components": "^5.1.3",
     "tinacms": "^0.67.0",
