--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -20,10 +20,12 @@
     "gray-matter": "^4.0.3",
     "ioredis": "^5.0.3",
     "js-yaml": "^4.1.0",
+    "neverthrow": "^4.3.1",
     "path-to-regexp": "^6.2.0",
     "react-is": "^18.0.0",
     "remark-gfm": "^1.0.0",
     "runtypes": "^6.5.1",
+    "serialize-error": "^9.1.1",
     "slugify": "^1.6.5",
     "styled-components": "^5.1.3",
     "tinacms": "^0.67.0",
