feat(next): add entrypoint for components

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -54,7 +54,8 @@
       "index.ts",
       "loader.ts",
       "client.tsx",
-      "server.ts"
+      "server.ts",
+      "componentRegistry.ts"
     ]
   }
 }
