--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@preconstruct/next": "^4.0.0",
     "@tinacms/cli": "^0.60.11",
+    "@tryghost/string": "^0.1.23",
     "@tryghost/tpl": "^0.1.14",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.3",
@@ -28,7 +29,6 @@
     "remark-gfm": "^1.0.0",
     "runtypes": "^6.5.1",
     "serialize-error": "^9.1.1",
-    "slugify": "^1.6.5",
     "styled-components": "^5.1.3",
     "tinacms": "^0.67.0",
     "yup": "^0.32.11"
