--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -28,11 +28,10 @@
     "react-error-boundary": "^3.1.4",
     "react-is": "^18.0.0",
     "remark-gfm": "^1.0.0",
-    "runtypes": "^6.5.1",
     "serialize-error": "^9.1.1",
     "styled-components": "^5.1.3",
     "tinacms": "^0.67.0",
-    "yup": "^0.32.11"
+    "zod": "^3.14.4"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.2",
