--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -19,6 +19,7 @@
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.3",
     "find-cache-dir": "^3.3.2",
+    "fnv1a": "^1.1.1",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "ioredis": "^5.0.3",
