--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -18,6 +18,7 @@
     "@tryghost/tpl": "^0.1.14",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.3",
+    "dot-prop": "^7.2.0",
     "find-cache-dir": "^3.3.2",
     "fnv1a": "^1.1.1",
     "fs-extra": "^10.0.0",
