--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -31,6 +31,7 @@
     "react-is": "^18.0.0",
     "remark-gfm": "^1.0.0",
     "serialize-error": "^10.0.0",
+    "sort-on": "^5.0.0",
     "styled-components": "^5.1.3",
     "tinacms": "^0.67.0",
     "zod": "^3.14.4"
