chore: fix package-lock.json

--- a/package.json
+++ b/package.json
@@ -89,15 +89,22 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@preconstruct/cli": "^2.1.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "eslint-config-kentcdodds": "^20.2.0",
     "eslint_d": "^12.0.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
     "lint-staged": ">=12",
+    "next": "^12.1.5",
     "prettier": "^2.6.2",
     "prettier-plugin-packagejson": "^2.2.17",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
