--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,14 +17,6 @@
     "@storybook/react": "^6.3.4"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "html-webpack-plugin": "^5.3.2"
+    "react": ">=16.13.1"
   }
 }
