--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -28,10 +28,10 @@
     "neverthrow": "^4.3.1",
     "path-to-regexp": "^6.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-is": "^18.0.0",
+    "react-is": ">=16.13.1",
     "remark-gfm": "^1.0.0",
     "sort-on": "^5.0.0",
-    "styled-components": "^5.1.3",
+    "styled-components": "^5.3.5",
     "tinacms": "^0.67.0",
     "zod": "^3.14.4"
   },
@@ -41,15 +41,14 @@
     "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.5",
     "@types/mock-fs": "^4.13.1",
-    "@types/react-is": "^17.0.3",
+    "@types/react-is": ">=16.13.1",
     "@types/webpack": "^5.0.0",
     "mock-fs": "^5.1.1",
     "type-fest": "^2.8.0"
   },
   "peerDependencies": {
-    "next": "^12.0.10",
-    "react": "^17.0.2",
-    "webpack": "^5.0.0"
+    "react": ">=16.13.1",
+    "next": "^12.0.0"
   },
   "preconstruct": {
     "entrypoints": [
