--- a/packages/nextra-theme-blog/package.json
+++ b/packages/nextra-theme-blog/package.json
@@ -14,12 +14,7 @@
     "next-themes": "^0.1.1",
     "nextra-theme-blog": "2.0.0-alpha.48"
   },
-  "devDependencies": {
-    "nextra": "^1.1.0"
-  },
   "peerDependencies": {
-    "next": "^12.0.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": ">=16.13.1"
   }
 }
