--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -12,8 +12,6 @@
     "next-themes": "^0.1.1"
   },
   "peerDependencies": {
-    "next": "^12.0.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": ">=16.13.1"
   }
 }
